WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250525
REGRESSION(
258814@main
) [WinCairo] WCScene.cpp can't compile
https://bugs.webkit.org/show_bug.cgi?id=250525
Summary
REGRESSION(258814@main) [WinCairo] WCScene.cpp can't compile
Fujii Hironori
Reported
2023-01-12 13:50:11 PST
> C:\BW\WinCairo-64-bit-Release-Build\build\Source\WebKit\GPUProcess\graphics\wc\WCScene.cpp(93): error C2672: 'WTF::HashMap<uint64_t,std::unique_ptr<WebKit::WCScene::Layer,std::default_delete<WebKit::WCScene::Layer>>,WTF::DefaultHash<unsigned __int64>,WTF::HashTraits<KeyArg>,WTF::HashTraits<MappedArg>,WTF::HashTableTraits>::add': no matching overloaded function found
Attachments
[fast-cq] Patch
(1.23 KB, patch)
2023-01-12 13:55 PST
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2023-01-12 13:55:02 PST
Created
attachment 464472
[details]
[fast-cq] Patch
EWS
Comment 2
2023-01-12 13:59:34 PST
Committed
258850@main
(e758a0f175c1): <
https://commits.webkit.org/258850@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 464472
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-01-12 14:00:20 PST
<
rdar://problem/104193674
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug