REGRESSION(258814@main) [WinCairo] WCScene.cpp can't compile https://bugs.webkit.org/show_bug.cgi?id=250525

Unreviewed build fix.

* Source/WebKit/GPUProcess/graphics/wc/WCScene.h:

Canonical link: https://commits.webkit.org/258850@main